--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -22,5 +22,7 @@ dependencies {
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
     implementation 'com.arcrobotics:ftclib:1.1.6'
     implementation 'com.arcrobotics.ftclib:vision:1.1.0'
+    implementation group: 'org.ejml', name: 'ejml-all', version: '0.40'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
 
 }
